# falang

./: .gitignore  LICENSE  README.md  falang.code-workspace  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  tsconfig.root.json
resources/: prism-modified.css  style-svg.css
resources/empty-projects/console_cpp/: .gitignore  README.txt  project.falangproject.json
resources/empty-projects/console_js/: .gitignore  README.txt  index.js  package.json  project.falangproject.json
resources/empty-projects/console_php/: README.txt  index.php  project.falangproject.json
resources/empty-projects/console_rust/: README.txt  project.falangproject.json
resources/empty-projects/console_ts/: index.ts  project.falangproject.json  tsconfig.json
resources/empty-projects/logic/: project.falangproject.json
resources/empty-projects/text/: package.json  project.falangproject.json
resources/test-projects/MonteCarlo/: .gitignore  project.falangproject.json  result.txt
resources/test-projects/api/: project.falangproject.json  result.txt
resources/test-projects/arrays/: project.falangproject.json  result.txt
resources/test-projects/conditions/: project.falangproject.json  result.txt
resources/test-projects/conditions/code/cpp/: .gitignore  CMakeLists.txt
resources/test-projects/objects/: README.txt  (+2 more)
scripts/: add_lang.js  add_unused_langs.js  clear-build.js  clear.sh  code-builder.js  getConnectedProjects.js  prepare_babel.js  projectsList.js  projectsToPublish.js  publish.js  replace-main-ts-to-js.js  set_packages_version.js  update-tsconfig-references.js
(+105 files in other folders)
